# stellarlend

./: CONTRIBUTING.md  package-lock.json  package.json
.devcontainer/: devcontainer.json
.github/workflows/: contract-fuzzing.yml  migration-tests.yml  security-perf-suite.yml  storage-impact.yml
api/: jest.config.js  package.json
api/db/init/: 02_compliance.sql
api/src/: app.ts  index.ts
api/src/__tests__/: compression.test.ts  config.test.ts  credit.service.test.ts  dispute.service.test.ts  integration.test.ts  notification.service.test.ts  social.service.test.ts
api/src/config/: index.ts  swagger.ts  types.ts  validators.ts
api/src/controllers/: analytics.controller.ts  compliance.controller.ts  config.controller.ts  credit.controller.ts  debtToken.controller.ts  dispute.controller.ts  lending.controller.ts  mev.controller.ts  risk.controller.ts  (+6 more)
docker/devnet/: .env.example  README.md  docker-compose.yml  genesis.sh  healthcheck.sh  init-devnet.sh  reset-devnet.sh
docs/: developer-portal.md  fuzzing-pipeline.md
oracle/src/: config.ts  index.ts
scripts/abi-extractor/: README.md  ci-check.sh  extract.sh  generate-types.js  version.sh
scripts/dependency-analyzer/: README.md  analyzer.test.ts  analyzer.ts  index.ts  types.ts
scripts/fuzz/: triage_crash.sh
scripts/state-exporter/: README.md  exporter.test.ts  exporter.ts  index.ts  types.ts
scripts/state-migrate/: README.md  index.ts  migrator.test.ts  migrator.ts  types.ts
scripts/storage-analyzer/: README.md  analyze.sh  compare.js  extract-storage.sh
stellar-lend/: Cargo.toml
stellar-lend/benchmarks/: Cargo.toml
stellar-lend/benchmarks/src/: framework.rs  main.rs  pool_factory_benchmarks.rs  reputation_benchmarks.rs
stellar-lend/client/: Cargo.toml
stellar-lend/contracts/compliance/: Cargo.toml
stellar-lend/contracts/compliance/src/: lib.rs  lib_test.rs
stellar-lend/contracts/copy-lending/: Cargo.toml
stellar-lend/contracts/copy-lending/src/: lib.rs
stellar-lend/contracts/credit-delegation/: Cargo.toml
stellar-lend/contracts/credit-delegation/src/: lib.rs
stellar-lend/contracts/dispute-resolution/: Cargo.toml
stellar-lend/contracts/dispute-resolution/src/: lib.rs
stellar-lend/contracts/hello-world/src/: deposit.rs  emergency_withdrawal.rs  errors.rs  events.rs  interest_rate.rs  lib.rs  liquidate.rs  mev_protection.rs  storage.rs  types.rs
stellar-lend/contracts/lending/src/: batch_view.rs  lib.rs  mutation.rs  query.rs  rate_guard.rs  sandwich_protection.rs  simulation_cache.rs  token_adapter.rs  token_adapter_erc20.rs  token_adapter_native.rs  token_adapter_verify.rs  token_adapter_wrapped.rs
stellar-lend/contracts/reputation-system/: Cargo.toml
stellar-lend/contracts/reputation-system/src/: lib.rs
stellar-lend/contracts/safe-math/src/: compound.rs  compound_test.rs  exponential.rs  lib.rs  mul_div.rs  mul_div_test.rs  precision.rs  rounding.rs  rounding_test.rs
stellar-lend/contracts/stablecoin/src/: lib.rs
stellar-lend/contracts/token-adapter/: Cargo.toml
stellar-lend/contracts/token-adapter/src/: lib.rs  lib_test.rs
stellar-lend/fuzz/src/: lending.rs
stellar-lend/tests/migration/: Cargo.toml
stellar-lend/tests/migration/src/: fuzz_runner.rs  gas_profiler.rs  integrity_checker.rs  main.rs  reporter.rs  rollback_validator.rs  state_generator.rs  storage.rs
stellar-lend/tests/migration/src/scenarios/: boundary.rs  empty_state.rs  full_state.rs  mod.rs
(+75 files in other folders)
