[workspace]
resolver = "2"
members = [
  "benchmarks",
  "client",
  "packages/oracle-client",
  "packages/test-framework",
  "contracts/amm",
  "contracts/bridge",
  "contracts/common",
  "contracts/shared-deadline",
  "contracts/delegation-registry",
  "contracts/hello-world",
  "contracts/lending",
  "contracts/lending-core",
  "contracts/lending-types",
  "contracts/lending-interest",
  "contracts/lending-risk",
  "contracts/safe-math",
  "contracts/stablecoin",
  "contracts/institutional-wallet",
  "contracts/migration-hub",
  "contracts/test-utils",
  "tests/migration",
  "contracts/stealth-address",
  "contracts/privacy-pool",
  "contracts/reputation-system",
  "contracts/copy-lending",
  "contracts/dispute-resolution",
  "contracts/credit-delegation",
  "contracts/core",
  "contracts/shared-signatures",
  "contracts/margin",
  "contracts/swap-router",
  "contracts/parameter-store",
  "contracts/oracle-hub",
  "contracts/liquidation-strategy",
  "contracts/sns-integration",
  "contracts/referral-program",
  "contracts/token-adapter",
  "contracts/compliance",
]
exclude = ["fuzz", "formal-verification/safe-math-proofs"]

[workspace.lints.rust]

[workspace.dependencies]
soroban-sdk = "23.4.1"
stellarlend-safe-math = { path = "contracts/safe-math" }
soroban-token-sdk = { version = "23.4.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = "z"
debug = 0
strip = "symbols"
debug-assertions = false
overflow-checks = true
lto = true
panic = "abort"
codegen-units = 1

# For more information about this profile see https://soroban.stellar.org/docs/basic-tutorials/logging#cargotoml-profile
[profile.release-with-logs]
inherits = "release"
debug-assertions = true

[profile.dev]
incremental = true

[profile.test]
incremental = true
