[package]
name = "stellarlend-dispute-resolution"
version = "0.1.0"
edition = "2021"

[lib]
name = "stellarlend_dispute_resolution"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
soroban-sdk = { workspace = true }
stellarlend-common = { path = "../common" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
stellarlend-common = { path = "../common", features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]
